--- a/frontend/themes/my-theme/styles/main.css
+++ b/frontend/themes/my-theme/styles/main.css
@@ -57,9 +57,15 @@
 }
 
 #sign-up{
-	height: 3vh;
-	width: 6vw;
-	font-size: 24px;
+	left: 40% !important;
+	bottom: 20% !important;
+	float: left;
+	height: 12vh;
+	width: 17vw;
+	font-size: 45pt;
+	letter-spacing: 3px;
+	min-width: 12vw;
+	height: 9vh;
 }
 
 #regis{
